--- a/src/app/work-space/work-space-upload-image/work-space-upload-image.component.html
+++ b/src/app/work-space/work-space-upload-image/work-space-upload-image.component.html
@@ -6,7 +6,7 @@
 
     <div class="d-flex">
 
-        <h3>Upload Image</h3>
+        <h3>Upload Document / Image</h3>
     </div>
 
     <div class="upload-image-box">
@@ -14,14 +14,14 @@
             <div class="col-sm-4">
                 <div class="radio">
                     <input type="radio" (click)="handleClick('New')" name="optionsRadios" id="optionsRadios1" value="option1" checked>
-                    <label for="optionsRadios1">Upload a new image
+                    <label for="optionsRadios1">Upload a new document / image
                     </label>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-5">
                 <div class="radio ml-4">
                     <input type="radio" (click)="handleClick('Edit')" name="optionsRadios" id="optionsRadios1" value="option1">
-                    <label for="optionsRadios1">Replace existing image
+                    <label for="optionsRadios1">Replace existing document / image
                     </label>
                 </div>
             </div>
