--- a/src/app/work-space/work-space-development-document/work-space-development-document.component.html
+++ b/src/app/work-space/work-space-development-document/work-space-development-document.component.html
@@ -164,7 +164,7 @@
       </div>
       -->
       <div class="row pl-3">
-        <div class="control-label">Reviewers Assigned</div>
+        <div class="page-sub-heading section-spacing">Reviewers Assigned</div>
       </div>
       <div class="row" *ngIf="existingReviewer.length ==0">
         <div class="col-sm-12">
