--- a/src/app/work-space/work-space-information-architecture/work-space-information-architecture.component.css
+++ b/src/app/work-space/work-space-information-architecture/work-space-information-architecture.component.css
@@ -11,3 +11,51 @@
 .processflow_pt_20{
     padding-top:20px;
 }
+
+.card {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: .25rem;
+}
+.card-header{
+    background: #C5C7D0 !important;
+    padding: .75rem 1.25rem;
+    margin-bottom: 0;
+    border-bottom: 1px solid rgba(0,0,0,.125);
+    text-align: center;
+}
+.h5, h5 {
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.2;
+}
+.card-title {
+    margin-bottom: .75rem;
+    white-space: nowrap;
+    text-overflow: ellipsis !important;
+    overflow: hidden;
+}
+p {
+    margin-top: 0;
+    margin-bottom: 1rem;
+}
+.card-text {
+    white-space: nowrap;
+    text-overflow: ellipsis !important;
+    overflow: hidden;
+}
+.card-body {
+    flex: 1 1 auto;
+    padding: 1.25rem;
+}
+.border-primary {
+    border-color: #6E3F81 !important;
+}
