--- a/src/app/console/login/login.component.html
+++ b/src/app/console/login/login.component.html
@@ -36,13 +36,14 @@
           <div class="row">
             <div class="col-sm-3"></div>
             <div class="col-sm-7">
-              <div class="txt-purple" (click)="forgotPassword()">Forgot your Password?</div>
+              <div class="txt-purple" (click)="forgotPassword()">Forgot your password?</div>
             </div>
           </div>
           <div class="row">
             <div class="col-sm-3"></div>
             <div class="col-sm-7"><button class="btn button-save mt-10 w100">Log In</button></div>
           </div>
+          <!--
           <div class="row mt-30">
             <div class="col-sm-4">
               <hr>
@@ -54,6 +55,7 @@
               <hr>
             </div>
           </div>
+          
           <div class="row pb-20">
             <div class="col-sm-4">
               <div class="badge badge-pill badge-outline"><img src="assets/images/google.png"> Google</div>
@@ -64,6 +66,10 @@
             <div class="col-sm-4">
               <div class="badge badge-pill badge-outline"><img src="assets/images/in.png">Linked In</div>
             </div>
+          </div>
+          -->
+          <div class="col-sm-4">
+            &nbsp;
           </div>
           <div class="row pb-40">
             <div class="col-sm-12">
