--- a/src/app/console/sign-up-email/sign-up-email.component.html
+++ b/src/app/console/sign-up-email/sign-up-email.component.html
@@ -22,7 +22,7 @@
                             <div class="col-sm-12"><button class="btn button-save w100 mt-20" >Sign up</button></div>
                         </div>
                         </form>
-                         <div class="row">
+                        <!--                         <div class="row">
                             <div class="col-sm-3"><hr></div>
                             <div class="col-sm-6"><div class="mtb-20 text-center">or Sign up with</div></div>
                             <div class="col-sm-3"><hr></div>
@@ -35,7 +35,8 @@
                         <div class="row">
                             <div class="col-sm-12"><div class="text-center">Already have an account? <a (click)="Close()" style="cursor: pointer;" ><span class="txt-purple font-bold">Log In</span></a></div></div>  
                         </div>
-    
+                        -->
+
     
                 </div>
             </div>
