--- a/src/app/console/sign-up-set-up-account/sign-up-set-up-account.component.html
+++ b/src/app/console/sign-up-set-up-account/sign-up-set-up-account.component.html
@@ -25,7 +25,7 @@
                     </div>
                         <div class="col-sm-12 mt-10"><div class="txt-lable">Account Name*</div></div>
                         <div class="input-group col-sm-12">
-                            <input autocomplete="off" type="text" class="txt-outline" id="AccountName" placeholder="Enter your Account Name"
+                            <input autocomplete="off" type="text" class="txt-outline" id="AccountName" placeholder="Enter account name"
                         formControlName="micrositeName" [ngClass]="{ 'is-invalid': submitted && f1.micrositeName.errors }">
                         <span class="input-group-text" id="basic-addon2">.hivezen.com</span>
                         <div *ngIf="submitted && f1.micrositeName.errors" class="invalid-feedback">
@@ -41,7 +41,7 @@
         <div class="col-sm-5" style="padding: 0px;">
             <div class="dialog-right">
                 <img src="assets/images/signup-2.png" class="mt-90">
-                <div class="mt-50 font-bold">Please fill in your details so<br>you can login later</div>
+                <div class="mt-50 font-bold">Please fill in your details</div>
                 <div class="copy-rights mt-20">&copy; HiveZen, All rights reserved</div>
             </div>
         </div>
