--- a/src/app/console/change-password/change-password.component.html
+++ b/src/app/console/change-password/change-password.component.html
@@ -4,13 +4,13 @@
            <img src="assets/images/close-popup.png">
           </button>
           <div class="row">
-            <div class="col-sm-7">
+            <div class="col-sm-12">
                 <div class="dialog-left"> 
                         <div class="heading"><span>Change Password</span></div>
-                        <form [formGroup]="form" (ngSubmit)="changePassword()" id="Signup">
+                        <form autocomplete="off" [formGroup]="form" (ngSubmit)="changePassword()" id="Signup">
                         <div class="row pt-50">                        
                             <div class="col-sm-12"><div class="txt-lable">Email*</div></div>
-                            <div class="col-sm-12"><input type="text" disabled class="form-control bg-white" formControlName="email" id="email" placeholder="Enter email"
+                            <div class="col-sm-12"><input autocomplete="off" type="text" disabled class="form-control bg-white" formControlName="email" id="email" placeholder="Enter email"
                                 [ngClass]="{ 'is-invalid': submitted && f1.email.errors }">
                                 <div *ngIf="submitted && f1.email.errors" class="invalid-feedback">
                                     <div *ngIf="f1.email.errors.required">Email ID is required</div>
@@ -19,7 +19,7 @@
                             
                             </div>
                             <div class="col-sm-12"><div class="txt-lable">Old Password*</div></div>
-                            <div class="col-sm-12"><input type="password" class="form-control bg-white" formControlName="mailedPassword" id="mailedPassword" placeholder="Enter old password"
+                            <div class="col-sm-12"><input autocomplete="off" type="text" class="form-control password txt-outline bg-white" formControlName="mailedPassword" id="mailedPassword" placeholder="Enter old password"
                                 [ngClass]="{ 'is-invalid': submitted && f1.mailedPassword.errors }">
                                 <div *ngIf="submitted && f1.mailedPassword.errors" class="invalid-feedback">
                                     <div *ngIf="f1.mailedPassword.errors.required">Old Password is required</div>
@@ -27,7 +27,7 @@
                             
                             </div>
                             <div class="col-sm-12"><div class="txt-lable">New Password*</div></div>
-                            <div class="col-sm-12"><input type="password" class="form-control bg-white" formControlName="newPassword" id="newPassword" placeholder="Enter new password"
+                            <div class="col-sm-12"><input autocomplete="off" type="text"  class="form-control password bg-white" formControlName="newPassword" id="newPassword" placeholder="Enter new password"
                                 [ngClass]="{ 'is-invalid': submitted && f1.newPassword.errors }">
                                 <div *ngIf="submitted && f1.newPassword.errors" class="invalid-feedback">
                                     <div *ngIf="f1.newPassword.errors.required">New Password is required</div>
@@ -35,7 +35,7 @@
                             
                             </div>
                             <div class="col-sm-12"><div class="txt-lable">Confirm Password*</div></div>
-                            <div class="col-sm-12"><input type="password" class="form-control bg-white" formControlName="confirmPassword" id="confirmPassword" placeholder="Enter confirm password"
+                            <div class="col-sm-12"><input autocomplete="off" type="text"  class="form-control password bg-white" formControlName="confirmPassword" id="confirmPassword" placeholder="Enter confirm password"
                                 [ngClass]="{ 'is-invalid': submitted && f1.confirmPassword.errors }">
                                 <div *ngIf="submitted && f1.confirmPassword.errors" class="invalid-feedback">
                                     <div *ngIf="f1.confirmPassword.errors.required">Confirm Password is required</div>
@@ -47,6 +47,7 @@
                         </form>   
                 </div>
             </div>
+            <!--
             <div class="col-sm-5" style="padding: 0px;">
                 <div class="dialog-right">
                     <img src="assets/images/signup-1.png" class="mt-50">
@@ -54,5 +55,6 @@
                     <div class="copy-rights">&copy; HiveZen, All rights reserved</div>
                 </div>
             </div>
+            -->
         </div>
     </div>
