--- a/src/app/work-space/work-space-phase/work-space-phase.component.html
+++ b/src/app/work-space/work-space-phase/work-space-phase.component.html
@@ -7,8 +7,8 @@
         <div class="menu-user-name">{{wsPocName}}</div><img class="menu-toggle-icon" src="assets/images/back-icon.png">
       </div>
       <div class="input-group tab-menu-item" *ngFor="let workSpaceBoardName of workSpaceBoardNames;">
-        <ng-container *ngIf="ShowPhase(workSpaceBoardName.custPhaseName)">
-          <a (click)="phaseClick(workSpaceBoardName.id,workSpaceBoardName.custPhaseName)">
+        <ng-container *ngIf="ShowPhase(workSpaceBoardName.phaseCode)">
+          <a (click)="phaseClick(workSpaceBoardName.id,workSpaceBoardName.phaseCode)">
             <button [class.active]="phaseId== workSpaceBoardName.id" class="tablinks ft-lighter">
               <div>
                 <img src="assets/images/Initial-Requirement.png" class="pr-7">
