--- a/src/app/work-space/work-space-summary/work-space-summary.component.html
+++ b/src/app/work-space/work-space-summary/work-space-summary.component.html
@@ -98,11 +98,14 @@
 
                     <div class="col-sm-3 milestons-list pl-0 mt-5">
                         
-                        <div class="page-sub-heading">Milestone
-                            <span><div (click)="viewMilestone('milestones')" class="btn button-save ml-10">View</div></span></div>
+                        <div (click)="viewMilestone('milestones')"  style="text-decoration: underline;cursor: pointer;" class="page-sub-heading">Milestone
+                            <span>
+                                <i (click)="viewMilestone('milestones')" class="fa fa-link fa-sm fa-fw mr-2 text-gray-400" style="font-size: 1.1em; cursor: pointer;color: #72308B;" aria-hidden="true"></i>
+                               <!-- <div (click)="viewMilestone('milestones')" class="btn button-save ml-10">View</div>-->
+                            </span></div>
                         <ul class="mt-10">
                             <ng-container *ngFor="let milestone of milestoneDtl;index as i">
-                             <li *ngIf="i < 5" [class.active]="milestone.statusCode != 'In-Progress' && milestone.statusCode != 'Not Started' ">
+                             <li *ngIf="milestone.phaseId <=5" [class.active]="milestone.statusCode != 'In-Progress' && milestone.statusCode != 'Not Started' ">
                               <p class="ft-gray ft-14 pb-2 txt-caps">Milestone {{i+1}}</p>
                               <div class="ft-18 ft-normal lh-14">{{milestone.custPhaseName}}</div>
                               <p *ngIf="milestone.statusCode != 'In-Progress' && milestone.statusCode != 'Not Started'" class="ft-gray ft-12">Completed on {{milestone.plannedEndDate | date}}</p>
