--- a/src/app/work-space/work-space-team/work-space-team.component.html
+++ b/src/app/work-space/work-space-team/work-space-team.component.html
@@ -45,7 +45,7 @@
                       <div class="font-semibold pl-8">{{teamListObj.userName}}</div>
                     </div>
                     <div class="col-sm-3">
-                      <div><img src="assets/images/edit-icon.svg" class="edit-icon">{{teamListObj.email}}</div>
+                      <div><!--<img src="assets/images/edit-icon.svg" class="edit-icon">-->{{teamListObj.email}}</div>
                     </div>
                     <div class="col-sm-2">
                       <div>{{teamListObj.usertype}}</div>
@@ -61,6 +61,7 @@
                     <div class="col-sm-2" style="text-align: right;">
                       <div style="width: 100px;" *ngIf="teamListObj.statusCode != 'Active' && teamListObj.usertype !='Idea Owner'"   (click)="changeTeamStatus(teamListObj,'Active')" class="btn button-save ml-10">Active</div>
 					            <div  style="width: 100px;" *ngIf="teamListObj.statusCode == 'Active' && teamListObj.usertype !='Idea Owner'"  (click)="changeTeamStatus(teamListObj,'Inactive')" class="btn button-save ml-10">InActive</div>
+					            <div  style="width: 100px;" *ngIf="teamListObj.usertype =='Idea Owner'" disabled class="btn btn-secondary ml-10">InActive</div>
 				
                     </div>
                   </div>
