--- a/src/app/console/change-password/change-password.component.html
+++ b/src/app/console/change-password/change-password.component.html
@@ -9,7 +9,7 @@
                         <div class="heading"><span>Change Password</span></div>
                         <form autocomplete="off" [formGroup]="form" (ngSubmit)="changePassword()" id="Signup">
                         <div class="row pt-50">                        
-                            <div class="col-sm-12"><div class="txt-lable">Email*</div></div>
+                            <div class="col-sm-12"><div class="txt-lable">Email<sup>*</sup></div></div>
                             <div class="col-sm-12"><input autocomplete="off" type="text" disabled class="form-control bg-white" formControlName="email" id="email" placeholder="Enter email"
                                 [ngClass]="{ 'is-invalid': submitted && f1.email.errors }">
                                 <div *ngIf="submitted && f1.email.errors" class="invalid-feedback">
@@ -18,7 +18,7 @@
                                   </div>
                             
                             </div>
-                            <div class="col-sm-12"><div class="txt-lable">Old Password*</div></div>
+                            <div class="col-sm-12"><div class="txt-lable">Old Password<sup>*</sup></div></div>
                             <div class="col-sm-12"><input autocomplete="off" type="text" class="form-control password txt-outline bg-white" formControlName="mailedPassword" id="mailedPassword" placeholder="Enter old password"
                                 [ngClass]="{ 'is-invalid': submitted && f1.mailedPassword.errors }">
                                 <div *ngIf="submitted && f1.mailedPassword.errors" class="invalid-feedback">
@@ -26,7 +26,7 @@
                                   </div>
                             
                             </div>
-                            <div class="col-sm-12"><div class="txt-lable">New Password*</div></div>
+                            <div class="col-sm-12"><div class="txt-lable">New Password<sup>*</sup></div></div>
                             <div class="col-sm-12"><input autocomplete="off" type="text"  class="form-control password bg-white" formControlName="newPassword" id="newPassword" placeholder="Enter new password"
                                 [ngClass]="{ 'is-invalid': submitted && f1.newPassword.errors }">
                                 <div *ngIf="submitted && f1.newPassword.errors" class="invalid-feedback">
@@ -34,7 +34,7 @@
                                   </div>
                             
                             </div>
-                            <div class="col-sm-12"><div class="txt-lable">Confirm Password*</div></div>
+                            <div class="col-sm-12"><div class="txt-lable">Confirm Password<sup>*</sup></div></div>
                             <div class="col-sm-12"><input autocomplete="off" type="text"  class="form-control password bg-white" formControlName="confirmPassword" id="confirmPassword" placeholder="Enter confirm password"
                                 [ngClass]="{ 'is-invalid': submitted && f1.confirmPassword.errors }">
                                 <div *ngIf="submitted && f1.confirmPassword.errors" class="invalid-feedback">
