--- a/src/app/console/login/login.component.html
+++ b/src/app/console/login/login.component.html
@@ -10,7 +10,7 @@
         <div class="col-sm-4">
           <div class="row pb-10">
             <div class="col-sm-3">
-              <div class="txt-lable text-right">Email</div>
+              <div class="txt-lable text-right">Email<sup>*</sup></div>
             </div>
             <div class="col-sm-7">
               <input autocomplete="off" type="text" class="txt-outline w-100" id="emailId" placeholder="Enter email"
@@ -23,7 +23,7 @@
           </div>
           <div class="row pb-20">
             <div class="col-sm-3">
-              <div class="txt-lable text-right">Password</div>
+              <div class="txt-lable text-right">Password<sup>*</sup></div>
             </div>
             <div class="col-sm-7">
               <input name="password" autocomplete="off" type="text" class="txt-outline password w-100" id="password" placeholder="Enter password"
