--- a/src/app/console/forgot-password/forgot-password.component.html
+++ b/src/app/console/forgot-password/forgot-password.component.html
@@ -9,7 +9,7 @@
                         <div class="heading"><span>Forgot Password</span></div>
                         <form autocomplete="off" [formGroup]="form" (ngSubmit)="forgotPassword()" id="Signup">
                         <div class="row mt-30">                        
-                            <div class="col-sm-12"><div class="txt-lable">Email*</div></div>
+                            <div class="col-sm-12"><div class="txt-lable">Email<sup>*</sup></div></div>
                             <div class="col-sm-12"><input type="text" class="form-control bg-white" formControlName="email" id="email" placeholder="Enter email"
                                 [ngClass]="{ 'is-invalid': submitted && f1.email.errors }">
                                 <div *ngIf="submitted && f1.email.errors" class="invalid-feedback">
