--- a/src/app/work-space/create-work-space/create-work-space.component.html
+++ b/src/app/work-space/create-work-space/create-work-space.component.html
@@ -7,7 +7,7 @@
         <div class="row pt-50">
             <div class="col-sm-5">
                 <div class="w-30 pull-left">
-                    <div class="txt-lable">Workspace Name</div>
+                    <div class="txt-lable">Workspace Name<sup>*</sup></div>
                 </div>
                 
                 <div class="w-70 pull-left">
@@ -21,7 +21,7 @@
             </div>
             <div class="col-sm-5">
                 <div class="w-30 pull-left">
-                    <div class="txt-lable">Description</div>
+                    <div class="txt-lable">Description<sup>*</sup></div>
                 </div>
             <div class="w-70 pull-left">
                 <textarea type="text" formControlName="wsDesc" class="form-control bg-white" id="description"
